# dvp-fastapi

./: .dockerignore  .env.example  DIGILOCKER_INTEGRATION_PLAN.md  Dockerfile  IMPLEMENTATION_NOTES.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_portal_roles.py  0003_subscription_module_upgrade.py  0004_add_hr_role.py  0005_add_digilocker_fields.py  001_initial_migration.py  121541817f69_add_employee_notes.py  319211993900_add_offer_joining_letter_fields.py
app/: main.py
app/core/: exceptions.py  logging.py  middleware.py  websocket.py
app/models/: __init__.py  audit_log.py  base.py  company.py  department.py  document.py  email_log.py  employee.py  notification.py  otp.py  password_reset.py  role.py  subscription.py  subscription_plan.py  subscription_request.py  subscription_usage.py  user.py
app/mongodb/: client.py  conversation.py  message.py
app/repositories/: audit_repository.py  company_repository.py  department_repository.py  document_repository.py  email_log_repository.py  employee_repository.py  notification_repository.py  subscription_plan_repository.py  subscription_repository.py  subscription_request_repository.py  subscription_usage_repository.py  user_repository.py
app/routes/: audit.py  auth.py  chat.py  companies.py  departments.py  digilocker.py  documents.py  employees.py  notifications.py  subscriptions.py  superadmin.py  (+2 more)
postman/: DVP-FastAPI.postman_collection.json  DVP-FastAPI.postman_environment.json  README.md
scripts/: create_superadmin.py
(+50 files in other folders)
